<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/basic"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/control_basic"
        android:title="@string/Basic"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/pen"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/Pen"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/pointer"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/Pointer"
        app:showAsAction="ifRoom" />
</menu>