<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:orientation="vertical"
    tools:context=".RemoteMode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/EXIT_RM" />

        <Button
            android:id="@+id/ESC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/F5_exit" />

        <Button
            android:id="@+id/F5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/F5" />
    </LinearLayout>

    <!--Timer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/elapsed"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:text="00:12:34"
            android:textAlignment="center"
            android:textColor="#FF9800"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/basicButtons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="prev" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/prev"
            android:text="Next"
            android:textSize="50sp" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/wrap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            app:itemIconTint="@drawable/menu_bottom_color_selector"
            app:itemTextColor="@drawable/menu_bottom_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_goneMarginEnd="0dp"
            app:menu="@menu/bottom_menu" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>